--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,11 @@ services:
     name: image-hash-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt && mkdir -p data/uploads
+    startCommand: python -m uvicorn api.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
       - key: PYTHONPATH
-        value: .
+        value: /opt/render/project/src
     healthCheckPath: / 
